<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">
        <SwitchPreference
            android:key="st_function"
            android:title="@string/st_function"/>
        <EditTextPreference
            android:defaultValue="@string/targetNumber_default"
            android:key="ep_targetNumber"
            android:dependency="st_function"
            android:title="@string/ep_targetNumber"/>
        <EditTextPreference
            android:defaultValue="@string/user_define_notify_default"
            android:key="ep_define_notify"
            android:dependency="st_function"
            android:title="@string/user_define_notify"/>
        <ListPreference
            android:key="lp_delay"
            android:summary="@string/delay_default"
            android:entries="@array/entry_list"
            android:entryValues="@array/value_list"
            android:dependency="st_function"
            android:dialogTitle="@string/dialog_delay"
            android:title="@string/lp_delay"/>
        <CheckBoxPreference
            android:key="cb_insert_system_db"
            android:dependency="st_function"
            android:title="@string/cb_insert_system_db"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">
        <Preference
            android:key="pf_about"
            android:title="@string/app_name">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>